--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/.bin/electron . ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/.bin/webpack src/js/main.js dist/js/bundle.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.6.5"
+    "electron": "^1.6.5",
+    "webpack": "^2.4.1"
   }
 }
