--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
   "name": "desktop-gitlab-snippets",
-  "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "山口将平 <shouhei.yamaguchi.be@gmail.com>",
-  "private": true,
-  "main" : "main.js",
+  "description": "",
+  "main": "main.js",
   "scripts": {
-    "start": "node_modules/.bin/electron .",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "node_modules/.bin/electron . ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node_modules/.bin/webpack src/js/main.js dist/js/bundle.js"
   },
-  "dependencies": {
-    "vue": "^2.2.1"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-latest": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
     "electron": "^1.6.5",
-    "file-loader": "^0.9.0",
-    "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "webpack": "^2.4.1"
   }
 }
