--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "version": "1.0.0",
   "author": "山口将平 <shouhei.yamaguchi.be@gmail.com>",
   "private": true,
-  "main" : "main.js",
+  "main": "main.js",
   "scripts": {
     "start": "node_modules/.bin/electron .",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-material": "^0.7.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -21,6 +22,7 @@
     "css-loader": "^0.25.0",
     "electron": "^1.6.5",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.16.1",
     "vue-loader": "^11.1.4",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
