--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "utf-8": "^1.0.0",
     "vue": "^2.2.1",
     "vue-material": "^0.7.1"
   },
